src2/objects/Machine_Type__c.object
<CustomObject>
    <fields>
        <fullName>CodeUUID__c</fullName>
        <externalId>true</externalId>
        <label>Code UUID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Machine_Type__c</referenceTo>
        <relationshipLabel>Machine Types</relationshipLabel>
        <relationshipName>Machine_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Code__c</fullName>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Sales_Organization</valueSetName>
        </valueSet>
    </fields>
    <label>Machine Type</label>
    <nameField>
        <label>Machine Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Machine Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>